logs/watchdog_20251012_0030.log
[12/10/2025  0:30:01,68] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025  0:30:01,89] END WATCHDOG 
